kubernetes/apps/ingress-system/gateway/resources/envoy-external.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.mcf.io/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-external
  # annotations:
  #   external-dns.alpha.kubernetes.io/target: &hostname ipv4.mcf.io
spec:
  gatewayClassName: envoy
  # infrastructure:
  #   annotations:
  #     external-dns.alpha.kubernetes.io/hostname: *hostname
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Same
  - name: https
    protocol: HTTPS
    port: 443
    allowedRoutes:
      namespaces:
        from: All
    tls:
      certificateRefs:
      - kind: Secret
        name: mcf-io-cert-tls
