kubernetes/apps/ingress-system/gateway/resources/gateway-external.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.mcf.io/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  annotations:
    external-dns.alpha.kubernetes.io/target: ipv4.mcf.io
spec:
  gatewayClassName: cluster-proxy
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    hostname: '*.mcf.io'
    name: http
    protocol: HTTP
    port: 80
