kubernetes/apps/ingress-system/gateway/resources/backend-traffic-policy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/envoyproxy/gateway/refs/heads/main/charts/gateway-helm/crds/generated/gateway.envoyproxy.io_clienttrafficpolicies.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: envoy
spec:
  targetSelectors:
  - group: gateway.networking.k8s.io
    kind: Gateway
  compression:
  - type: Brotli
  - type: Gzip
